Add support for OTA updates
Adds support for performing OTA updates.

Signed-off-by: Daniel Mangum <georgedanielmangum@gmail.com>

--- a/prj.conf
+++ b/prj.conf
@@ -25,3 +25,10 @@ CONFIG_SENSOR_SHELL=n
 # Golioth Firmware SDK with all dependencies
 CONFIG_GOLIOTH_FIRMWARE_SDK=y
 CONFIG_GOLIOTH_STREAM=y
+CONFIG_GOLIOTH_FW_UPDATE=y
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_STREAM_FLASH=y
+CONFIG_IMG_MANAGER=y
+CONFIG_IMG_ERASE_PROGRESSIVELY=y
