--- a/prj.conf
+++ b/prj.conf
@@ -5,7 +5,15 @@ CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
 
 # Application
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_RUNTIME=y
 CONFIG_GOLIOTH_SAMPLE_COMMON=y
+CONFIG_GOLIOTH_SAMPLE_PSK_SETTINGS=y
+CONFIG_GOLIOTH_SAMPLE_SETTINGS_AUTOLOAD=y
+CONFIG_GOLIOTH_SAMPLE_SETTINGS_SHELL=y
 CONFIG_LOG_BACKEND_GOLIOTH=y
 
 # Sensors
